Makes Autocompletion dialog bigger.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -138,7 +138,7 @@
 
 	<!---------------------- Autocompletion Modal ---------------------->
 	<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalTitle">
-		<div class="modal-dialog" role="document">
+		<div class="modal-dialog" role="document" style="width: 80%;">
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" id="btnCloseModal" class="close" data-dismiss="modal" aria-label="Close">
