--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -10,6 +10,9 @@
 
 <script type="text/javascript" src="js/app-config.js"></script>
 <script type="text/javascript" src="js/browser.js"></script>
+
+<script src="js/sigma/sigma.min.js"></script>
+
 <script type="text/javascript">
 	function getGraphName() {
 		var name = getCookie('graphName');
