--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -121,13 +121,13 @@
 			<div id="browserHeader" class="panel-heading">
 				<div id="actionBtns" class="btn-group" role="group" aria-label="Actions">
 					<button id="btnExportGraphSVG" type="button" class="btn btn-default" aria-label="Export graph as SVG" onclick="exportGraphAsSVG()" style="display: none;">
-						<span class="glyphicon glyphicon-export" aria-hidden="true"></span> Export
+						<span class="glyphicon glyphicon-export" aria-hidden="true"></span> SVG Export
 					</button>
 					<button id="btnFullscreenBrowser" type="button" class="btn btn-default" aria-label="View browser in full-screen" onclick="toggleBrowserFullscreen()">
 						<span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span> Full-screen
 					</button>
 					<button id="btnCloseBrowser" type="button" class="btn btn-default" aria-label="Close browser and return to entry point" onclick="closeBrowser()">
-						<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Close
+						<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Close Browser
 					</button>
 				</div>
 
