--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -12,6 +12,8 @@
 <script type="text/javascript" src="js/browser.js"></script>
 
 <script src="js/sigma/sigma.min.js"></script>
+<script src="js/sigma/plugins/sigma.renderers.edgeLabels.min.js"></script>
+<script src="js/sigma/plugins/sigma.renderers.customShapes.min.js"></script>
 <script src="js/sigma/plugins/sigma.exporters.svg.min.js"></script>
 
 <script type="text/javascript">
