Adds property for grouping.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -81,6 +81,12 @@
 						<p style="font-style: italic;">Check this box, if you prefer text-based browsing.<br>
 						Leave it unchecked if you want to visually browse.</p>
 					</div>
+
+					<div class="checkbox">
+						<label style="font-weight: bold;"><input id="groupBySubject" type="checkbox" value="">Group Neighbors by Predicate</label>
+						<p style="font-style: italic;">Check this box, if you want to group neighbors by predicate.<br>
+						This will strongly reduce the number of nodes displayed at once.</p>
+					</div>
 				</div>
 			</div>
 
