--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -77,15 +77,13 @@
 					<p>Configure your browsing experience.</p>
 
 					<div class="checkbox">
-						<label style="font-weight: bold;"><input id="textualBrowsing" type="checkbox" value="">Textual Browsing</label>
-						<p style="font-style: italic;">Check this box, if you prefer text-based browsing.<br>
-						Leave it unchecked if you want to visually browse.</p>
+						<label style="font-weight: bold;"><input id="textualBrowsing" type="checkbox" value="">Use text-based browsing</label>
+						<p style="font-style: italic;">This will use a textual representation of the RDF graph.</p>
 					</div>
 
 					<div class="checkbox">
-						<label style="font-weight: bold;"><input id="groupBySubject" type="checkbox" value="">Group Neighbors by Predicate</label>
-						<p style="font-style: italic;">Check this box, if you want to group neighbors by predicate.<br>
-						This will strongly reduce the number of nodes displayed at once.</p>
+						<label style="font-weight: bold;"><input id="groupBySubject" type="checkbox" value="">Group neighbors by predicate</label>
+						<p style="font-style: italic;">This will strongly reduce the number of nodes displayed at once.</p>
 					</div>
 				</div>
 			</div>
