--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -9,7 +9,13 @@
 <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <script type="text/javascript" src="js/app-config.js"></script>
-<script type="text/javascript" src="js/browser.js"></script>
+<script type="text/javascript" src="js/browser.config.js"></script>
+<script type="text/javascript" src="js/browser.entrypoint.js"></script>
+<script type="text/javascript" src="js/browser.events.js"></script>
+<script type="text/javascript" src="js/browser.history.js"></script>
+<script type="text/javascript" src="js/browser.textual.js"></script>
+<script type="text/javascript" src="js/browser.visual.js"></script>
+<script type="text/javascript" src="js/browser.window.js"></script>
 
 <script src="js/sigma/sigma.min.js"></script>
 <script src="js/sigma/plugins/sigma.renderers.edgeLabels.min.js"></script>
