Rearranges some functions.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -88,7 +88,7 @@
 					</div>
 
 					<div class="checkbox">
-						<label style="font-weight: bold;"><input id="groupBySubject" type="checkbox" value="">Group neighbors by predicate</label>
+						<label style="font-weight: bold;"><input id="groupByPredicate" type="checkbox" value="">Group neighbors by predicate</label>
 						<p style="font-style: italic;">This will strongly reduce the number of nodes displayed at once.</p>
 					</div>
 				</div>
