--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -5,17 +5,20 @@
 <link rel="stylesheet" type="text/css" href="bootstrap.css">
 <link rel="stylesheet" type="text/css" href="css/browser.css">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.7.0/css/bootstrap-slider.min.css"></script>
+
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.7.0/bootstrap-slider.min.js"></script>
 
 <script type="text/javascript" src="js/app-config.js"></script>
 <script type="text/javascript" src="js/browser.config.js"></script>
 <script type="text/javascript" src="js/browser.entrypoint.js"></script>
-<script type="text/javascript" src="js/browser.events.js"></script>
 <script type="text/javascript" src="js/browser.history.js"></script>
 <script type="text/javascript" src="js/browser.textual.js"></script>
 <script type="text/javascript" src="js/browser.visual.js"></script>
 <script type="text/javascript" src="js/browser.window.js"></script>
+<script type="text/javascript" src="js/utility.js"></script>
 
 <script src="js/sigma/sigma.min.js"></script>
 <script src="js/sigma/plugins/sigma.renderers.edgeLabels.min.js"></script>
@@ -79,17 +82,23 @@
 				<div class="panel-heading">
 					<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Browser Configuration
 				</div>
-				<div class="panel-body" style="color: white; background-color: rgba(70, 130, 180, 0.95); height: 250px;">
+				<div id="configuration" class="panel-body">
 					<p>Configure your browsing experience.</p>
 
 					<div class="checkbox">
-						<label style="font-weight: bold;"><input id="textualBrowsing" type="checkbox" value="">Use text-based browsing</label>
-						<p style="font-style: italic;">This will use a textual representation of the RDF graph.</p>
+						<label><input id="textualBrowsing" type="checkbox" value="">Use text-based browsing</label>
+						<p>This will use a textual representation of the RDF graph.</p>
 					</div>
 
 					<div class="checkbox">
-						<label style="font-weight: bold;"><input id="groupByPredicate" type="checkbox" value="">Group neighbors by predicate</label>
-						<p style="font-style: italic;">This will strongly reduce the number of nodes displayed at once.</p>
+						<label><input id="groupByPredicate" type="checkbox" value="">Group neighbors by predicate</label>
+						<p>This will strongly reduce the number of nodes displayed at once.</p>
+					</div>
+
+					<div class="range">
+						<input id="numNeighbors" data-slider-id='numNeighborsSlider' type="text" data-slider-min="5" data-slider-max="100" data-slider-step="1" data-slider-value="20" value="20"/><br>
+						<label>Number of neighbors to show</label>
+						<p>Select how many neighbor nodes should be displayed at once.</p>
 					</div>
 				</div>
 			</div>
