--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -96,8 +96,8 @@
 					</div>
 
 					<div class="range">
-						<input id="numNeighbors" data-slider-id='numNeighborsSlider' type="text" data-slider-min="5" data-slider-max="100" data-slider-step="1" data-slider-value="20" value="20"/><br>
-						<label>Number of neighbors to show</label>
+						<input id="numNeighbors" data-slider-id='numNeighborsSlider' type="text" data-slider-min="5" data-slider-max="100" data-slider-step="1" data-slider-value="40" value="20"/><br>
+						<label>Maximum number of neighbors to show</label>
 						<p>Select how many neighbor nodes should be displayed at once.</p>
 					</div>
 				</div>
