Removes grouping by predicate option.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -93,7 +93,7 @@
 					<div class="range">
 						<input id="numNeighbors" data-slider-id='numNeighborsSlider' type="text" data-slider-min="5" data-slider-max="100" data-slider-step="1" data-slider-value="40" value="20"/><br>
 						<label>Maximum number of neighbors to show</label>
-						<p>Select how many neighbor nodes should be displayed at once.</p>
+						<p>Select how many neighbor nodes should be displayed at most.</p>
 					</div>
 
 					<div class="checkbox">
