Hides SVG export button on textual browsing.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -146,7 +146,7 @@
 		<div id="browser" class="panel panel-default">
 			<div id="browserHeader" class="panel-heading">
 				<div id="actionBtns" class="btn-group" role="group" aria-label="Actions">
-					<button id="btnExportGraphSVG" type="button" class="btn btn-default" aria-label="Export graph as SVG" style="display: none;">
+					<button id="btnExportGraphSVG" type="button" class="btn btn-default" aria-label="Export graph as SVG">
 						<span class="glyphicon glyphicon-export" aria-hidden="true"></span> SVG Export
 					</button>
 					<button id="btnFullscreenBrowser" type="button" class="btn btn-default" aria-label="View browser in full-screen">
