Adds button to reload the curent graph.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -146,6 +146,9 @@
 		<div id="browser" class="panel panel-default">
 			<div id="browserHeader" class="panel-heading">
 				<div id="actionBtns" class="btn-group" role="group" aria-label="Actions">
+					<button id="btnReloadGraph" type="button" class="btn btn-default" aria-label="Reload the current graph">
+						<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Reload Graph
+					</button>
 					<button id="btnExportGraphSVG" type="button" class="btn btn-default" aria-label="Export graph as SVG" disabled>
 						<span class="glyphicon glyphicon-export" aria-hidden="true"></span> SVG Export
 					</button>
