--- a/src/main/webapp/centrality.html
+++ b/src/main/webapp/centrality.html
@@ -37,15 +37,15 @@ function calculateCentralityMetric(){
 	*/
 
 	// step 1
-	var graphName = getCookie('graphName');
+//	var graphName = getCookie('graphName');
 
 	// step 2
-	var Node1 = getCookie('selectedNode1');
-	Node1 = Node1.replaceAll("/","$");
-	Node1 = Node1.replaceAll("#","&");
+//	var Node1 = getCookie('selectedNode1');
+//	Node1 = Node1.replaceAll("/","$");
+//	Node1 = Node1.replaceAll("#","&");
 	
 	// step 3
-	var metric = $('input[name=metricRadio]:checked').val();
+//	var metric = $('input[name=metricRadio]:checked').val();
 
 	// step 4
 	var xhttp = new XMLHttpRequest();
@@ -63,9 +63,9 @@ function calculateCentralityMetric(){
 		}
 	}
 	
-//	var graphName = "sib200";
-//	var Node1 = "<http:$$www.ins.cwi.nl$sib$user$u62>";
-//	var metric = "4";
+	var graphName = "sib200";
+	var Node1 = "<http:$$www.ins.cwi.nl$sib$user$u62>";
+	var metric = "4";
 
 	xhttp.open("GET", REST_API + "calculateCentrality/" + graphName +"/"+ Node1 +"/"+ metric, true);
 	xhttp.send();
