Integrates a first self-designed node style.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -24,6 +24,7 @@
 <script src="js/sigma/plugins/sigma.renderers.edgeLabels.min.js"></script>
 <script src="js/sigma/plugins/sigma.renderers.customShapes.min.js"></script>
 <script src="js/sigma/plugins/sigma.exporters.svg.min.js"></script>
+<script src="js/sigma/customExtensions/sigma.canvas.nodes.centralNode.js"></script>
 
 <script type="text/javascript">
 	function getGraphName() {
@@ -86,8 +87,8 @@
 					<div>
 						<label for="browsingType">Select your browsing type</label>
 						<select class="form-control" id="browsingType">
-							<option value="circular">Circular arrangement</option>
 							<option value="direction">Arranged by direction</option>
+							<option value="circular">Circular arrangement</option>
 							<option value="textual">Textual browsing</option>
 						</select>
 					</div>
