--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -103,6 +103,9 @@
 						&nbsp; <span id="sliderVal">40</span><br>
 						<p>Select how many neighbor nodes should be displayed at most.</p>
 					</div>
+
+					<div id="colorSchemeSelection">
+					</div>
 				</div>
 			</div>
 
