Extracts sigma graph settings to separate file.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -15,6 +15,7 @@
 <script type="text/javascript" src="js/browser.config.js"></script>
 <script type="text/javascript" src="js/browser.entrypoint.js"></script>
 <script type="text/javascript" src="js/browser.history.js"></script>
+<script type="text/javascript" src="js/browser.sigma.settings.js"></script>
 <script type="text/javascript" src="js/browser.textual.js"></script>
 <script type="text/javascript" src="js/browser.visual.js"></script>
 <script type="text/javascript" src="js/browser.window.js"></script>
