Reorders JS imports.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -22,9 +22,11 @@
 <script type="text/javascript" src="js/utility.js"></script>
 
 <script src="js/sigma/sigma.min.js"></script>
-<script src="js/sigma/plugins/sigma.renderers.edgeLabels.min.js"></script>
-<script src="js/sigma/plugins/sigma.renderers.customShapes.min.js"></script>
 <script src="js/sigma/plugins/sigma.exporters.svg.min.js"></script>
+<script src="js/sigma/plugins/sigma.renderers.customEdgeShapes.min.js"></script>
+<script src="js/sigma/plugins/sigma.renderers.customShapes.min.js"></script>
+<script src="js/sigma/plugins/sigma.renderers.edgeLabels.min.js"></script>
+<script src="js/sigma/plugins/sigma.renderers.parallelEdges.min.js"></script>
 <script src="js/sigma/customExtensions/sigma.canvas.nodes.centralNode.js"></script>
 
 <script type="text/javascript">
