Makes neighbors appear the same as central node.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -28,6 +28,7 @@
 <script src="js/sigma/plugins/sigma.renderers.edgeLabels.min.js"></script>
 <script src="js/sigma/plugins/sigma.renderers.parallelEdges.min.js"></script>
 <script src="js/sigma/customExtensions/sigma.canvas.nodes.centralNode.js"></script>
+<script src="js/sigma/customExtensions/sigma.canvas.nodes.neighbor.js"></script>
 
 <script type="text/javascript">
 	function getGraphName() {
