--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -23,6 +23,8 @@
 
 <script src="js/sigma/sigma.min.js"></script>
 <script src="js/sigma/plugins/sigma.exporters.svg.min.js"></script>
+<script src="js/sigma/plugins/sigma.layout.noverlap.min.js"></script>
+<script src="js/sigma/plugins/sigma.plugins.animate.min.js"></script>
 <script src="js/sigma/plugins/sigma.renderers.customEdgeShapes.min.js"></script>
 <script src="js/sigma/plugins/sigma.renderers.customShapes.min.js"></script>
 <script src="js/sigma/plugins/sigma.renderers.edgeLabels.min.js"></script>
