Extends RDF browser by one more UI option.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -94,6 +94,7 @@
 					<div>
 						<label for="browsingType">Select your browsing type</label>
 						<select class="form-control" id="browsingType">
+							<option value="random">Randomized arranged neighbors</option>
 							<option value="direction">Arranged by direction</option>
 							<option value="circular">Circular arrangement</option>
 							<option value="textual">Textual browsing</option>
@@ -153,6 +154,9 @@
 				#2 FOR TESTING: <a href="#" 
 					onClick="testBrowser('Harry_Potter_and_the_Order_of_the_Phoenix_(film)', '<http://dbpedia.org/resource/Harry_Potter_and_the_Order_of_the_Phoenix_(film)>')" 
 					style="background-color: white;">Start with Harry Potter and the Order of the Phoenix (film)</a><br>
+				#3 FOR TESTING: <a href="#" 
+					onClick="testBrowser('Little_Richard', '<http://dbpedia.org/resource/Little_Richard>')" 
+					style="background-color: white;">Start with Little Richard</a><br>
 				<script type="text/javascript">
 				function testBrowser(name, URI) {
 					clearBrowsingHistory();
