--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -94,7 +94,7 @@
 					<div>
 						<label for="browsingType">Select your browsing type</label>
 						<select class="form-control" id="browsingType">
-							<option value="random">Randomized arranged neighbors</option>
+							<option value="random">Randomly arranged neighbors</option>
 							<option value="direction">Arranged by direction</option>
 							<option value="circular">Circular arrangement</option>
 							<option value="textual">Textual browsing</option>
