Removes background image.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -28,8 +28,7 @@
 </script>
 </head>
 
-<body onload="getGraphName()" background="./img/bg.jpg"
-	style="-webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
+<body onload="getGraphName()">
 	<div class="navbar navbar-inverse" style="background-color: rgba(70, 130, 180, 0.95);">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
