Shortens texts on textual browsing.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="css/bootstrap-slider.min.css">
 
 <script type="text/javascript" src="js/jquery/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="js/jquery/jquery.shorten.1.0.min.js"></script>
 <script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/bootstrap/bootstrap-slider.min.js"></script>
 
