Adds a problematic test case.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -156,9 +156,9 @@
 				#1 FOR TESTING: <a href="#" 
 					onClick="testBrowser('Kings_of_Leon', '<http://dbpedia.org/resource/Kings_of_Leon>')" 
 					style="background-color: white;">Start with Kings of Leon</a><br>
-				#2 FOR TESTING: <a href="#" 
-					onClick="testBrowser('Harry_Potter_and_the_Order_of_the_Phoenix_(film)', '<http://dbpedia.org/resource/Harry_Potter_and_the_Order_of_the_Phoenix_(film)>')" 
-					style="background-color: white;">Start with Harry Potter and the Order of the Phoenix (film)</a><br>
+				#2 PROBLEMATIC: <a href="#" 
+					onClick="testBrowser('Harry_Potter_and_the_Philosopher\'s_Stone_(film)', ' <http://dbpedia.org/resource/Harry_Potter_and_the_Philosopher\'s_Stone_(film)>')" 
+					style="background-color: white;">Start with Harry Potter and the Philosopher's Stone</a><br>
 				#3 FOR TESTING: <a href="#" 
 					onClick="testBrowser('Little_Richard', '<http://dbpedia.org/resource/Little_Richard>')" 
 					style="background-color: white;">Start with Little Richard</a><br>
