Uses linkurious instead of plain sigma library.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -21,17 +21,16 @@
 <script type="text/javascript" src="js/browser.window.js"></script>
 <script type="text/javascript" src="js/utility.js"></script>
 
-<script src="js/sigma/sigma.min.js"></script>
-<script src="js/sigma/plugins/sigma.exporters.svg.min.js"></script>
-<script src="js/sigma/plugins/sigma.layout.noverlap.min.js"></script>
-<script src="js/sigma/plugins/sigma.plugins.animate.min.js"></script>
-<script src="js/sigma/plugins/sigma.renderers.customEdgeShapes.min.js"></script>
-<script src="js/sigma/plugins/sigma.renderers.customShapes.min.js"></script>
-<script src="js/sigma/plugins/sigma.renderers.edgeLabels.min.js"></script>
-<script src="js/sigma/plugins/sigma.renderers.parallelEdges.min.js"></script>
-<script src="js/sigma/customExtensions/sigma.canvas.nodes.centralNode.js"></script>
-<script src="js/sigma/customExtensions/sigma.canvas.nodes.literal.js"></script>
-<script src="js/sigma/customExtensions/sigma.canvas.nodes.neighbor.js"></script>
+<script src="js/linkurious/sigma.min.js"></script>
+<script src="js/linkurious/plugins.min.js"></script>
+<script src="js/linkurious/plugins/sigma.exporters.image.min.js"></script>
+<script src="js/linkurious/plugins/sigma.exporters.svg.min.js"></script>
+<script src="js/linkurious/plugins/sigma.layouts.noverlap.min.js"></script>
+<script src="js/linkurious/plugins/sigma.plugins.animate.min.js"></script>
+<script src="js/linkurious/plugins/sigma.plugins.design.min.js"></script>
+<script src="js/linkurious/plugins/sigma.renderers.customEdgeShapes.min.js"></script>
+<script src="js/linkurious/plugins/sigma.renderers.edgeLabels.min.js"></script>
+<script src="js/linkurious/plugins/sigma.renderers.linkurious.min.js"></script>
 
 <script type="text/javascript">
 	function getGraphName() {
