--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -112,6 +112,9 @@
 
 					<div id="colorSchemeSelection">
 					</div>
+
+					<div id="layoutAlgorithmSelection">
+					</div>
 				</div>
 			</div>
 
@@ -178,9 +181,20 @@
 					<button id="btnReloadGraph" type="button" class="btn btn-default" aria-label="Reload the current graph">
 						<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Reload Graph
 					</button>
-					<button id="btnExportGraphSVG" type="button" class="btn btn-default" aria-label="Export graph as SVG" disabled>
+
+					<div class="btn-group" role="group">
+						<button id="btnExportDropdown" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" disabled>
+							<span class="glyphicon glyphicon-export" aria-hidden="true"></span> Export Graph <span class="caret"></span>
+						</button>
+						<ul class="dropdown-menu">
+							<li><a id="btnExportGraphPNG" href="#">Export as PNG</a></li>
+							<li><a id="btnExportGraphSVG" href="#">Export as SVG</a></li>
+						</ul>
+					</div>
+
+					<!--<button id="btnExportGraphSVG" type="button" class="btn btn-default" aria-label="Export graph as SVG" disabled>
 						<span class="glyphicon glyphicon-export" aria-hidden="true"></span> SVG Export
-					</button>
+					</button>-->
 					<button id="btnFullscreenBrowser" type="button" class="btn btn-default" aria-label="View browser in full-screen">
 						<span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span> Full-screen
 					</button>
