Changes full-screen icon accordingly.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -196,7 +196,7 @@
 						<span class="glyphicon glyphicon-export" aria-hidden="true"></span> SVG Export
 					</button>-->
 					<button id="btnFullscreenBrowser" type="button" class="btn btn-default" aria-label="View browser in full-screen">
-						<span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span> Full-screen
+						<span class="glyphicon glyphicon-resize-full" aria-hidden="true"></span> Full-screen
 					</button>
 					<button id="btnCloseBrowser" type="button" class="btn btn-default" aria-label="Close browser and return to entry point">
 						<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Close Browser
