Removes self-developed tooltip, uses the one from linkurious.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="js/jquery/jquery.shorten.1.0.min.js"></script>
 <script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/bootstrap/bootstrap-slider.min.js"></script>
+<script type="text/javascript" src="js/mustache/mustache.min.js"></script>
 
 <script type="text/javascript" src="js/app-config.js"></script>
 <script type="text/javascript" src="js/browser.config.js"></script>
@@ -28,6 +29,7 @@
 <script src="js/linkurious/plugins/sigma.layouts.noverlap.min.js"></script>
 <script src="js/linkurious/plugins/sigma.plugins.animate.min.js"></script>
 <script src="js/linkurious/plugins/sigma.plugins.design.min.js"></script>
+<script src="js/linkurious/plugins/sigma.plugins.tooltips.min.js"></script>
 <script src="js/linkurious/plugins/sigma.renderers.customEdgeShapes.min.js"></script>
 <script src="js/linkurious/plugins/sigma.renderers.edgeLabels.min.js"></script>
 <script src="js/linkurious/plugins/sigma.renderers.linkurious.min.js"></script>
