Disable GoTo button for central node and literals.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -24,7 +24,7 @@
 
 <script src="js/linkurious/sigma.min.js"></script>
 <script src="js/linkurious/plugins.min.js"></script>
-<script src="js/linkurious/plugins/sigma.exporters.image.min.js"></script>
+<!--<script src="js/linkurious/plugins/sigma.exporters.image.min.js"></script>
 <script src="js/linkurious/plugins/sigma.exporters.svg.min.js"></script>
 <script src="js/linkurious/plugins/sigma.layouts.noverlap.min.js"></script>
 <script src="js/linkurious/plugins/sigma.plugins.animate.min.js"></script>
@@ -32,7 +32,7 @@
 <script src="js/linkurious/plugins/sigma.plugins.tooltips.min.js"></script>
 <script src="js/linkurious/plugins/sigma.renderers.customEdgeShapes.min.js"></script>
 <script src="js/linkurious/plugins/sigma.renderers.edgeLabels.min.js"></script>
-<script src="js/linkurious/plugins/sigma.renderers.linkurious.min.js"></script>
+<script src="js/linkurious/plugins/sigma.renderers.linkurious.min.js"></script>-->
 
 <script type="text/javascript">
 	function getGraphName() {
