--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -163,6 +163,9 @@
 				#2 FOR TESTING: <a href="#" 
 					onClick="testBrowser('Little_Richard', '<http://dbpedia.org/resource/Little_Richard>')" 
 					style="background-color: white;">Start with Little Richard</a><br>
+				#3 FOR TESTING: <a href="#" 
+					onClick="testBrowser('Nine_Inch_Nails', '<http://dbpedia.org/resource/Nine_Inch_Nails>')" 
+					style="background-color: white;">Start with Nine Inch Nails</a><br>
 				<script type="text/javascript">
 				function testBrowser(name, URI) {
 					clearBrowsingHistory();
