Implements custom rendering for nodes.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -24,6 +24,8 @@
 
 <script src="js/linkurious/sigma.min.js"></script>
 <script src="js/linkurious/plugins.min.js"></script>
+<script src="js/linkurious/plugins/sigma.canvas.nodes.rect.js"></script>
+<script src="js/linkurious/plugins/sigma.canvas.hovers.rect.js"></script>
 <!--<script src="js/linkurious/plugins/sigma.exporters.image.min.js"></script>
 <script src="js/linkurious/plugins/sigma.exporters.svg.min.js"></script>
 <script src="js/linkurious/plugins/sigma.layouts.noverlap.min.js"></script>
@@ -157,6 +159,9 @@
 				<p>Here we recommend some possible entry points that may be interesting for you.</p>
 
 				<!-- TODO This part must be removed for production. -->
+				#0 FOR TESTING: <a href="#" 
+					onClick="testBrowser('Harry_Potter_and_the_Philosophers_Stone_(film)', '<http://dbpedia.org/resource/Harry_Potter_and_the_Philosophers_Stone_(film)>')" 
+					style="background-color: white;">Start with Harry Potter and the Philosophers Stone (film)</a><br>
 				#1 FOR TESTING: <a href="#" 
 					onClick="testBrowser('Kings_of_Leon', '<http://dbpedia.org/resource/Kings_of_Leon>')" 
 					style="background-color: white;">Start with Kings of Leon</a><br>
